fix - don't stretch flexbox items vertically

--- a/assets/css/_schedule-page-line-diagram.scss
+++ b/assets/css/_schedule-page-line-diagram.scss
@@ -114,6 +114,7 @@
 }
 
 .m-schedule-diagram__stop-details {
+  align-items: flex-start;
   display: flex;
   flex-wrap: wrap;
 }
